--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="Html/comidas.html">Comidas Típicas</a></li>
+                <li><a href="html/comidas.html">Comidas Típicas</a></li>
                 <li><a href="Html/pontos.html">Pontos Turísticos</a></li>
             </ul>
         </nav>
