--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veneza - Um Lugar Que Eu Gostaria de Conhecer</title>
-    <link rel="stylesheet" href="CSS/Style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <!-- Cabeçalho e Menu -->
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="html/comidas.html">Comidas Típicas</a></li>
-                <li><a href="Html/pontos.html">Pontos Turísticos</a></li>
+                <li><a href="html/pontos.html">Pontos Turísticos</a></li>
             </ul>
         </nav>
     </header>
